// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display the diff without copying if the user hasn't run the diff yet 1`] = `
"@somebody It looks like you haven't checked for diffs in this issue yet. Please check the diffs in this comment and then run \`@locize-diff copy\` again.

### \`en-US/translation\`

| Key | \`latest\` | \`production\` |
| --- | --- | --- |
| \`foo\` | bar | baz |

_Generated by [Locize Diff](https://github.com/Widen/locize-diff)._"
`;

exports[`should not copy the diffs if they have changed since the last comment 1`] = `
"Heads up! Looks like there are some differences between your two Locize versions.

### \`en-US/translation\`

| Key | \`latest\` | \`production\` |
| --- | --- | --- |
| \`foo\` | bar | oops |

_Generated by [Locize Diff](https://github.com/Widen/locize-diff)._"
`;
